[gd_scene load_steps=21 format=3 uid="uid://da1nf55g0ar8d"]

[ext_resource type="Script" path="res://Scenes/Levels/control.gd" id="1_xbpct"]
[ext_resource type="Texture2D" uid="uid://ca3n02klxsfci" path="res://Scenes/Levels/clsiffied.png" id="2_d0sgb"]
[ext_resource type="FontFile" uid="uid://c3jw3bx1oeecq" path="res://Scenes/Levels/m3x6 (1).ttf" id="2_l1ne5"]
[ext_resource type="Script" path="res://Sounds/RandomSounds.gd" id="4_8esoy"]
[ext_resource type="AudioStream" uid="uid://c4rgy74dxygdm" path="res://Sounds/click (17).wav" id="5_yjgtu"]
[ext_resource type="AudioStream" uid="uid://bsfjrl5xht7fl" path="res://Sounds/click (18).wav" id="6_n351y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t06g5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hw3c0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f8qc1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wrf81"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4s5un"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v2nkf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_54g2x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4xpx7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gqb3x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_suce0"]

[sub_resource type="Animation" id="Animation_37c7t"]
resource_name = "In"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(352, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1ge4i"]
resource_name = "Out"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(352, 300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.92677]
}

[sub_resource type="Animation" id="Animation_6bs85"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cawsg"]
_data = {
"In": SubResource("Animation_37c7t"),
"Out": SubResource("Animation_1ge4i"),
"RESET": SubResource("Animation_6bs85")
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_xbpct")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -167.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Sprite2D" parent="Control"]
texture_filter = 1
position = Vector2(160, 90)
texture = ExtResource("2_d0sgb")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_left = 79.0
offset_top = 8.0
offset_right = 179.0
offset_bottom = 73.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_l1ne5")
theme_override_font_sizes/font_size = 32
text = "Theft"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_l1ne5")
text = "sdadadsadad"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 74.0
offset_right = 174.0
offset_bottom = 139.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer2"]
layout_mode = 2

[node name="Label4" type="Label" parent="Control/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_l1ne5")
text = "Cyberbullyed Steve Jobs,Saved one guy from a fire,But failed to save one in the procces"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 63.0
offset_top = 152.0
offset_right = 112.0
offset_bottom = 172.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.332881, 0.332881, 0.332881, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_l1ne5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_t06g5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hw3c0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f8qc1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wrf81")
text = "Spare"

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 154.0
offset_right = 73.0
offset_bottom = 174.0
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.332881, 0.332881, 0.332881, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_l1ne5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4s5un")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_v2nkf")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_54g2x")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4xpx7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gqb3x")
theme_override_styles/normal = SubResource("StyleBoxEmpty_suce0")
text = "Kill"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cawsg")
}
autoplay = "In"

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"
script = ExtResource("4_8esoy")
streams = Array[AudioStream]([ExtResource("5_yjgtu"), ExtResource("6_n351y")])

[connection signal="mouse_entered" from="Control/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Control/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_button_2_pressed"]
